--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ p {
 
 /* Navbar */
 .navbar {
-  background-color: #002147 !important;
+  background-color:#0261cf !important;
 }
 
 .navbar-brand {
@@ -37,7 +37,7 @@ p {
 
 /* Navbar link styling */
 .navbar .nav-link {
-  color: #002147 !important;
+  color: #026be3 !important;
   font-weight: 500;
 }
 .navbar .nav-link:hover {
